--- a/APP/www/css/app_style.less
+++ b/APP/www/css/app_style.less
@@ -512,6 +512,13 @@ body{
       color: #313131;
       letter-spacing: 0.6px;
     }
+    &.no-active{
+      background-color: #e6e6e6;
+      button{
+        color: #9d9d9d;
+        background-color: #e6e6e6;
+      }
+    }
   }
 
   .shooting-bar{
@@ -1846,6 +1853,7 @@ button.lock{
     line-height: 16px;
     &.active{
       background: #f8e71c;
+      color: #515151!important;
     }
   }
 }
@@ -2753,4 +2761,82 @@ button.add-interest{
     line-height: 16px;
     margin: 0 0 8px;
   }
+}
+.happening-category.interest {
+  padding: 25px 12px 80px;
+}
+.interest-category{
+  .category-item{
+    &.active{
+      background-color: #f6eb0b;
+    }
+  }
+}
+.button-bar{
+  button>a{
+    color: #313131;
+  }
+}
+.sub-category-search{
+  position: relative;
+  padding: 19px 12px 6px;
+  &:before{
+    content: '';
+    position: absolute;
+    display: block;
+    z-index: 2;
+    width: 14px;
+    height: 14px;
+    left: 17px;
+    top: 28px;
+    background: url(../img/search-icon.png);
+  }
+  input{
+    display: block;
+    width: 100%;
+    height: 32px;
+    background-color: #f1f1f1;
+    border-radius: 3px;
+    padding: 0 0 0 23px;
+  }
+}
+.subcategory-list.interest-sub{
+  li{
+    color: #949494;
+  }
+}
+.subcategory{
+  .more-button{
+    display: block;
+    margin: 0 0 30px 0;
+    width: 100%;
+    border: 1px solid #e2e2e2;
+    border-radius: 100px;
+    padding: 9px 0;
+    color: #979797;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 16px;
+  }
+  .border{
+    margin-left: 12px;
+    height: 1px;
+    background: #f4f4f4;
+  }
+}
+.select-result{
+  padding: 17px 12px;
+  background-color: #f1f1f1;
+  span{
+    color: #121212;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+  }
+}
+button.next-step{
+  width: 16px;
+  height: 16px;
+  padding: 0;
+  background: url("../img/next-icon.png");
 }
