--- a/APP/www/css/app_style.css
+++ b/APP/www/css/app_style.css
@@ -2762,3 +2762,76 @@ button.next-step {
   padding: 0;
   background: url("../img/next-icon.png");
 }
+.attending-contact,
+.attending-contact-list {
+  padding: 0 0 0 12px;
+}
+.attending-contact li,
+.attending-contact-list li {
+  padding: 10px 0;
+  border-bottom: 1px solid #f4f4f4;
+}
+.attending-contact li:last-child,
+.attending-contact-list li:last-child {
+  border-bottom: none;
+}
+.attending-contact .user-image,
+.attending-contact-list .user-image {
+  margin: 0 10px 0 0;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 50%;
+  text-align: center;
+}
+.attending-contact .user-image img,
+.attending-contact-list .user-image img {
+  width: 100%;
+}
+.attending-contact .user-info,
+.attending-contact-list .user-info {
+  vertical-align: top;
+  padding: 2px 0;
+}
+.attending-contact .user-info p,
+.attending-contact-list .user-info p {
+  color: #4b4b4b;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+}
+.attending-contact .user-info p + p,
+.attending-contact-list .user-info p + p {
+  color: #adadae;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  line-height: 18px;
+}
+.attending-contact .attending-add-user {
+  background-color: #f8e71c;
+  border-color: #f8e71c;
+}
+.attending-contact .attending-add-user .add-icon {
+  background: url(../img/add-sprite.png) 0 0;
+}
+.attending-add-user {
+  margin: 4px 12px 0 0;
+  border: 1px solid #54c8f9;
+  border-radius: 46px;
+  padding: 5px 12px 4px;
+  text-align: center;
+}
+.attending-add-user.active {
+  background-color: #f8e71c;
+  border-color: #f8e71c;
+}
+.attending-add-user.active .add-icon {
+  background: url(../img/add-sprite.png) 0 0;
+}
+.add-icon {
+  display: inline-block;
+  width: 20px;
+  height: 13px;
+  background: url(../img/add-sprite.png) 0 -18px;
+}
