--- a/APP/www/css/app_style.css
+++ b/APP/www/css/app_style.css
@@ -234,7 +234,6 @@ h5 {
 .user-info-detail .follower,
 .user-info-detail .following {
   padding: 30px 0 0 0;
-  width: 75px;
 }
 .user-info-detail .follower p,
 .user-info-detail .following p {
@@ -285,8 +284,8 @@ h5 {
   position: relative;
   top: 287px;
   z-index: 3;
-  padding: 12px 43px 10px;
-  min-width: 100px;
+  padding: 12px 0 10px;
+  width: 156px;
   margin: 0 auto;
   display: block;
   background-color: #f8e71c;
@@ -2834,4 +2833,103 @@ button.next-step {
   width: 20px;
   height: 13px;
   background: url(../img/add-sprite.png) 0 -18px;
+}
+html,
+body {
+  height: 100%;
+}
+body {
+  font-size: 100%;
+  line-height: 1.5;
+  font-family: "Roboto Condensed", sans-serif;
+  background: #28283b;
+  background-image: linear-gradient(#28283b 0%, #0f0f17 100%);
+  color: #444;
+}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: baseline;
+}
+a {
+  text-decoration: none;
+}
+.calendar-wrapper {
+  width: 100%;
+  background: #fff;
+}
+table {
+  clear: both;
+  width: 100%;
+  border: 1px solid #dcdcff;
+  border-radius: 3px;
+  border-collapse: collapse;
+  color: #444;
+}
+td {
+  height: 48px;
+  text-align: center;
+  vertical-align: middle;
+  border-right: 1px solid #dcdcff;
+  border-top: 1px solid #dcdcff;
+  width: 14.28571429%;
+}
+td.not-current {
+  color: #c0c0c0;
+}
+td.today {
+  font-weight: 700;
+  color: #28283b;
+  font-size: 1.5em;
+}
+thead td {
+  border: none;
+  color: #28283b;
+  text-transform: uppercase;
+  font-size: 1.5em;
+}
+#btnPrev {
+  float: left;
+  margin-bottom: 20px;
+}
+#btnPrev:before {
+  content: '\f104';
+  font-family: FontAwesome;
+  padding-right: 4px;
+}
+#btnNext {
+  float: right;
+  margin-bottom: 20px;
+}
+#btnNext:after {
+  content: '\f105';
+  font-family: FontAwesome;
+  padding-left: 4px;
+}
+#btnPrev,
+#btnNext {
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  color: #c0c0c0;
+  cursor: pointer;
+  font-family: "Roboto Condensed", sans-serif;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+}
+#btnPrev:hover,
+#btnNext:hover {
+  color: #28283b;
+  font-weight: bold;
 }
