--- a/APP/www/css/app_style.css
+++ b/APP/www/css/app_style.css
@@ -1797,14 +1797,17 @@ button.lock {
   float: left;
   background: #fff;
   text-align: center;
-  width: 47%;
+  width: 48%;
   height: 63px;
-  margin: 5px;
+  margin: 5px 10px 0 0;
   padding: 20px 0 0 0;
   color: #252414;
   font-size: 15px;
   font-weight: 400;
   line-height: 17px;
+}
+.category-item:nth-child(even) {
+  margin: 5px 0 5px 0;
 }
 .subcategory {
   background: #fff;
@@ -2305,7 +2308,7 @@ button.lock {
 }
 .login-slider-item {
   width: 100%;
-  height: 700px;
+  height: 100vh;
   position: relative;
 }
 .login-slider-item.start {
@@ -2932,4 +2935,8 @@ thead td {
 #btnNext:hover {
   color: #28283b;
   font-weight: bold;
+}
+#map {
+  width: 100%;
+  height: 100%;
 }
