--- a/APP/www/css/app_style.less
+++ b/APP/www/css/app_style.less
@@ -1813,14 +1813,17 @@ button.lock{
   float: left;
   background: #fff;
   text-align: center;
-  width: 47%;
+  width: 48%;
   height: 63px;
-  margin: 5px;
+  margin: 5px 10px 0 0;
   padding: 20px 0 0 0;
   color: #252414;
   font-size: 15px;
   font-weight: 400;
   line-height: 17px;
+  &:nth-child(even){
+    margin: 5px 0 5px 0;
+  }
 }
 .subcategory{
 
@@ -2346,7 +2349,7 @@ button.lock{
 }
 .login-slider-item{
   width: 100%;
-  height: 700px;
+  height: 100vh;
   position: relative;
   &.start{
     background:url(../img/start.png)
@@ -3045,3 +3048,9 @@ thead td {
     font-weight:bold;
   }
 }
+
+#map {
+  width: 100%;
+  height: 100%;
+}
+
